# mhd_transfer

./: CMakeLists.txt  check_M87_StokesI_bias.py  create_data_files.py  create_data_files_psi.py  generate_maps_mf.py  generate_mojave_stack.py  generate_rotm_spix_maps.py  generate_rotm_spix_maps_from_vlbi.py  generate_vlbi_data.py  generate_vlbi_data_VSOP.py  generate_vlbi_data_lesha.py  generate_vlbi_data_mf.py  generate_vlbi_data_mf_I.py  generate_vlbi_data_mf_I_recover.py  generate_vlbi_data_zhenya.py  generate_vlbi_data_zhenya2.py  jet_image.py  plotting.py  solve_and_transfer.py  vlbi_utils.py
include/: BField.h  Geometry.h  Intersection.h  Jet.h  MyExceptions.h  NField.h  Observation.h  ParticlesDistribution.h  SimulationInterpolater.h  System.h  VField.h  utils.h
src/: BField.cpp  Geometry.cpp  Intersection.cpp  Jet.cpp  NField.cpp  Observation.cpp  ParticlesDistribution.cpp  SimulationInterpolater.cpp  System.cpp  VField.cpp  main.cpp  utils.cpp
